syntax = "proto3";

import "auth.proto";
package http_api;
option go_package = "artyomliou/xenoblast-backend/internal/pkg_proto/http_api";

message RegisterRequest {
  string nickname = 1;
}

message RegisterResponse{
  string apiKey = 1;
  int32 userId = 2;
}

message ValidateRequest {
  string apiKey = 1;
}

message ValidateResponse {
  auth.PlayerInfoDto player = 1;
}

message GetGameInfoRequest {
  string apiKey = 1;
  int32 gameId = 2;
}